RESOLVED FIXED224372
[iOS][FCR] Indeterminate progress bars should update at 60fps
https://bugs.webkit.org/show_bug.cgi?id=224372
Summary [iOS][FCR] Indeterminate progress bars should update at 60fps
Aditya Keerthi
Reported 2021-04-09 09:01:00 PDT
...
Attachments
Patch (1.68 KB, patch)
2021-04-09 09:02 PDT, Aditya Keerthi
wenson_hsieh: review+
Patch for landing (2.64 KB, patch)
2021-04-13 20:29 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-04-09 09:01:25 PDT
Aditya Keerthi
Comment 2 2021-04-09 09:02:26 PDT
Wenson Hsieh
Comment 3 2021-04-13 14:29:13 PDT
Comment on attachment 425623 [details] Patch It seems like progress bars should animate in sync with the vsync refresh rate, but that would involve a much larger refactoring. Perhaps this adjustment is okay for the time being..
Aditya Keerthi
Comment 4 2021-04-13 20:29:04 PDT
Created attachment 425944 [details] Patch for landing
EWS
Comment 5 2021-04-14 06:30:49 PDT
Committed r275942 (236504@main): <https://commits.webkit.org/236504@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425944 [details].
Note You need to log in before you can comment on or make changes to this bug.