[iOS][FCR] Indeterminate progress bars should update at 60fps https://bugs.webkit.org/show_bug.cgi?id=224372 <rdar://problem/76416848>

Reviewed by Wenson Hsieh.

* rendering/RenderProgress.cpp:
(WebCore::RenderProgress::animationTimerFired):

Added a FIXME to state that progress bar animation should be performed
as part of the rendering update lifecycle. Progress bars have always
maintained their own timers for animation, however, the update interval
may not always match the display's refresh rate.

* rendering/RenderThemeIOS.mm:

Ensure a smoother animation by increasing the frame rate to 60fps.


Canonical link: https://commits.webkit.org/236504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275942 268f45cc-cd09-0410-ab3c-d52691b4dbfc